<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_autonomous_nav</name>
  <version>0.0.0</version>
  <description>Pacote de navegação autônoma para TurtleBot</description>
  <maintainer email="seuemail@exemplo.com">Seu Nome</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
</package>
